Changes since last push:
 - Made a proper way to save biomes as an image
 - Fixed a bug in the menu world creation progress display

Known "features":
 - The strenth of gravity is independent of the world.
 - Things that move multiple tiles per second won't collide as if they were moving in a straight line. The best way to solve this may be to not allow anything to move that fast, possibly via multiple updates between renderings.
 - If carried by a boulder with another boulder right behind you, the top
boulder updates first and traps you.
 - Dirt and mud look very similar, and mud looks identical to humus
 - I can't spread light as far as I would like without slowing down the 
framerate

Known bugs:
 - Clickboxes r3equire the mouse to move before they notice it
 - Collision detection misses one when falling into a two-wide gap at just the
right angle
 - When the window is bigger than the map, crossing x = 0 causes an assertion
error.
 - The player can't jump when colliding with a wall.

To do:
 - save and load the player
 - Make all public Map functions accept any x value (might be done?)
 - remove Map.getForeground() and Map.getBackground()
 - Make spawning destroy solid tiles at the spawn
 - make it impossible to place solid blocks on top of creatures
 - make light work properly with background walls and water
 - add light sources other than the sky
 - make collisions with semi-solid blocks slow the player down
 - Trees!
 - add actual liquids?
 - make sprites for all tile types
 - add a "quit to menu" option
