@@ -7,5 +7,5 @@ map.bmp
 *.swp
 *.world
 catch.hpp
-*.world.ppm
+*.ppm
 .d
